fix some ui elements on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -833,16 +833,18 @@ button:active {
   margin-left: auto;
   margin-right: auto;
   font-family: 'FFFFORWA', monospace;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .game-over-text {
   position:absolute;
-  top: 50%;
-  right: 20%;
+  top: 30%;
+  /* right: 20%; */
   z-index: 10;
 
-  color: #a53b2b;
+  width: 100%;
+
+  color: #61150a;
   margin-left: auto;
   margin-right: auto;
   font-family: 'FFFFORWA', monospace;
